--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Use Azure Key Vault Secrets
+name: Azure Login Workflow
 
 on:
   push:
@@ -6,25 +6,12 @@ on:
       - main
 
 jobs:
-  use-secrets:
+  azure-login:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Login to Azure
-      - name: Login to Azure
+      - name: Azure login
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      # Step 2: Fetch Secrets from Azure Key Vault
-      - name: Get secrets from Azure Key Vault
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
-            echo "ENCRYPTION_KEY=$(az keyvault secret show --name EncryptionKey --vault-name qwertydemoprism --query value -o tsv)" >> $GITHUB_ENV
-            echo "EXTERNAL_GEOFENCING_CORP_IDS=$(az keyvault secret show --name ExtenalGeoFencingCorpIds --vault-name qwertydemoprism --query value -o tsv)" >> $GITHUB_ENV
-
-      # Step 3: Use the Secrets
-      - name: Use Secrets
-        run: |
-          echo "Secret 1: ${{ env.ENCRYPTION_KEY }}"
-          echo "Secret 2: ${{ env.EXTERNAL_GEOFENCING_CORP_IDS }}"
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
