--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Azure Login Workflow
+name: Use Azure Key Vault Secrets
 
 on:
   push:
@@ -6,12 +6,17 @@ on:
       - main
 
 jobs:
-  azure-login:
+  use-secrets:
     runs-on: ubuntu-latest
     steps:
       - name: Azure login
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: '{"clientId":"${{ secrets.CLIENTID }}","clientSecret":"${{ secrets.CLIENTSECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTIONID }}","tenantId":"${{ secrets.TENANTID }}"}'
+
+      - name: Get secrets from Azure Key Vault
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            echo "ENCRYPTION_KEY=$(az keyvault secret show --name EncryptionKey --vault-name ${{ secrets.KEYVAULT_NAME }} --query value -o tsv)" >> $GITHUB_ENV
+            echo "EXTERNAL_GEOFENCING_CORP_IDS=$(az keyvault secret show --name ExtenalGeoFencingCorpIds --vault-name ${{ secrets.KEYVAULT_NAME }} --query value -o tsv)" >> $GITHUB_ENV
