--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Use Azure Key Vault Secrets
 
 on:
@@ -18,12 +17,13 @@ jobs:
 
       # Step 2: Fetch Secrets from Azure Key Vault
       - name: Get secrets from Azure Key Vault
-        uses: azure/keyvault-secrets@v1
+        uses: azure/keyvault-secrets-action@v1
         with:
           keyvault: qwertydemoprism # Replace with your Key Vault name
           secrets: |
             EncryptionKey
             ExtenalGeoFencingCorpIds
+
       # Step 3: Use the Secrets
       - name: Print Secret (for demonstration)
         run: |
