--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,19 @@ jobs:
   use-secrets:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Login to Azure
-      - name: Login to Azure
+      - name: Azure login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS1 }}
 
-      # Step 2: Fetch Secrets from Azure Key Vault
       - name: Get secrets from Azure Key Vault
-        uses: azure/keyvault-secrets-action@v1
+        uses: azure/cli@v1
         with:
-          keyvault: qwertydemoprism # Replace with your Key Vault name
-          secrets: |
-            EncryptionKey
-            ExtenalGeoFencingCorpIds
+          inlineScript: |
+            echo "ENCRYPTION_KEY=$(az keyvault secret show --name EncryptionKey --vault-name qwertydemoprism --query value -o tsv)" >> $GITHUB_ENV
+            echo "EXTERNAL_GEOFENCING_CORP_IDS=$(az keyvault secret show --name ExtenalGeoFencingCorpIds --vault-name qwertydemoprism --query value -o tsv)" >> $GITHUB_ENV
 
-      # Step 3: Use the Secrets
-      - name: Print Secret (for demonstration)
+      - name: Use Secrets
         run: |
-          echo "Secret 1: ${{ secrets.EncryptionKey }}"
-          echo "Secret 2: ${{ secrets.ExtenalGeoFencingCorpIds }}"
+          echo "Secret 1: ${{ env.ENCRYPTION_KEY }}"
+          echo "Secret 2: ${{ env.EXTERNAL_GEOFENCING_CORP_IDS }}"
