--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Azure login
         uses: azure/login@v1
         with:
-          creds: '{"clientId":"${{ secrets.CLIENTID }}","clientSecret":"${{ secrets.CLIENTSECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTIONID }}","tenantId":"${{ secrets.TENANTID }}"}'
+          creds: ${{ secrets.AZURE_CREDENTIALS1 }}
 
       - name: Fetch secrets and set variables
         uses: azure/cli@v1
