--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,18 +44,14 @@ jobs:
           tokenPrefix: "#{" 
           tokenSuffix: "}#"
         env:
-          # For develop branch (qwertydemoprism)
-          ${{ if eq(github.ref, 'refs/heads/develop') }}:
-            EncryptionKey: ${{ env.EncryptionKey }}
-            ExtenalGeoFencingCorpIds: ${{ env.ExtenalGeoFencingCorpIds }}
-            Jwt-Expiry: ${{ env.Jwt-Expiry }}
-            prismhrclientId: ${{ env.prismhrclientId }}
-            service-bus-connectionstring: ${{ env.service-bus-connectionstring }}
-          # For release branch (qwertyrelease)
-          ${{ if startsWith(github.ref, 'refs/heads/release/') }}:
-            Notification-URI: ${{ env.Notification-URI }}
-            Proxy-URI: ${{ env.Proxy-URI }}
-            x-tlm-auth: ${{ env.x-tlm-auth }}
+          EncryptionKey: ${{ github.ref == 'refs/heads/develop' && env.EncryptionKey || '' }}
+          ExtenalGeoFencingCorpIds: ${{ github.ref == 'refs/heads/develop' && env.ExtenalGeoFencingCorpIds || '' }}
+          Jwt-Expiry: ${{ github.ref == 'refs/heads/develop' && env.Jwt-Expiry || '' }}
+          prismhrclientId: ${{ github.ref == 'refs/heads/develop' && env.prismhrclientId || '' }}
+          service-bus-connectionstring: ${{ github.ref == 'refs/heads/develop' && env.service-bus-connectionstring || '' }}
+          Notification-URI: ${{ startsWith(github.ref, 'refs/heads/release/') && env.Notification-URI || '' }}
+          Proxy-URI: ${{ startsWith(github.ref, 'refs/heads/release/') && env.Proxy-URI || '' }}
+          x-tlm-auth: ${{ startsWith(github.ref, 'refs/heads/release/') && env.x-tlm-auth || '' }}
 
       - name: Verify Token Replacement
         run: |
