--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - develop
-      - 'release/*'
+      - release
+      - 'release/**'
+      - 'release*'
 
 jobs:
   replace-tokens:
@@ -14,13 +16,14 @@ jobs:
 
       - name: Set Environment Variable and KeyVault
         run: |
-          if [[ $GITHUB_REF == refs/heads/release/* ]]; then
+          if [[ $GITHUB_REF == refs/heads/release* ]]; then
             echo "ENV=uat" >> $GITHUB_ENV
             echo "KEYVAULT_NAME=qwertyrelease" >> $GITHUB_ENV
           elif [[ $GITHUB_REF == refs/heads/develop ]]; then
             echo "ENV=dev" >> $GITHUB_ENV
             echo "KEYVAULT_NAME=qwertydemoprism" >> $GITHUB_ENV
           fi
+
       - name: Azure login
         uses: azure/login@v1
         with:
@@ -35,6 +38,7 @@ jobs:
               value=$(az keyvault secret show --name $secret --vault-name ${{ env.KEYVAULT_NAME }} --query 'value' -o tsv)
               echo "${secret}=${value}" >> $GITHUB_ENV
             done
+
       - name: Replace Tokens in appsettings.json
         uses: cschleiden/replace-tokens@v1
         with:
@@ -42,14 +46,14 @@ jobs:
           tokenPrefix: "#{" 
           tokenSuffix: "}#"
         env:
-          EncryptionKey: ${{ github.ref == 'refs/heads/develop' && env.EncryptionKey || '' }}
-          ExtenalGeoFencingCorpIds: ${{ github.ref == 'refs/heads/develop' && env.ExtenalGeoFencingCorpIds || '' }}
-          Jwt-Expiry: ${{ github.ref == 'refs/heads/develop' && env.Jwt-Expiry || '' }}
-          prismhrclientId: ${{ github.ref == 'refs/heads/develop' && env.prismhrclientId || '' }}
-          service-bus-connectionstring: ${{ github.ref == 'refs/heads/develop' && env.service-bus-connectionstring || '' }}
-          Notification-URI: ${{ startsWith(github.ref, 'refs/heads/release/') && env.Notification-URI || '' }}
-          Proxy-URI: ${{ startsWith(github.ref, 'refs/heads/release/') && env.Proxy-URI || '' }}
-          x-tlm-auth: ${{ startsWith(github.ref, 'refs/heads/release/') && env.x-tlm-auth || '' }}
+          EncryptionKey: ${{ env.EncryptionKey }}
+          ExtenalGeoFencingCorpIds: ${{ env.ExtenalGeoFencingCorpIds }}
+          Jwt-Expiry: ${{ env.Jwt-Expiry }}
+          prismhrclientId: ${{ env.prismhrclientId }}
+          service-bus-connectionstring: ${{ env.service-bus-connectionstring }}
+          Notification-URI: ${{ env.Notification-URI }}
+          Proxy-URI: ${{ env.Proxy-URI }}
+          x-tlm-auth: ${{ env.x-tlm-auth }}
 
       - name: Verify Token Replacement
         run: |
