--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,8 @@ jobs:
         run: |
           echo "Building Docker image for environment: $ENV"
           # Build the Docker image with both the run ID and latest tag
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:${IMAGE_TAG} -t ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:latest .
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:identity-${IMAGE_TAG} -t ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:identity-latest .
           # Push the Docker image with the specific tag
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:${IMAGE_TAG}
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:identity-${IMAGE_TAG}
           # Push the Docker image with the latest tag
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:latest
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/identity-api:identity-latest
